--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -62,7 +62,9 @@
 
         <action
             android:id="@+id/action_countdownFragment_to_ongoingFragment"
-            app:destination="@id/ongoingFragment" />
+            app:destination="@id/ongoingFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 
     <fragment
@@ -72,7 +74,9 @@
         tools:layout="@layout/fragment_ongoing">
         <action
             android:id="@+id/action_ongoingFragment_to_reportFragment"
-            app:destination="@id/reportFragment" />
+            app:destination="@id/reportFragment"
+            app:popUpTo="@id/ongoingFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/reportFragment"
@@ -83,8 +87,11 @@
             android:id="@+id/action_reportFragment_to_homeFragment"
             app:destination="@id/homeFragment"
             app:launchSingleTop="true"
-            app:popUpTo="@id/ongoingFragment"
+            app:popUpTo="@id/reportFragment"
             app:popUpToInclusive="true" />
+        <argument
+            android:name="exercise"
+            app:argType="com.example.android.forrest.data.model.Exercise" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
