--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -3,10 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-    </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -197,18 +193,17 @@
                     android:textStyle="bold"
                     android:textSize="13sp"
                     android:layout_marginBottom="12dp"
-                    android:text="RECENT ACTIVITIES" />
+                    android:textAllCaps="true"
+                    android:text="@string/recent_activities" />
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/exercises_list"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    tools:listitem="@layout/list_item_recent_activities"/>
-
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/list_item_recent_activities" />
             </LinearLayout>
-
-
-
         </com.google.android.material.card.MaterialCardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
