--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -71,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            app:duration="@{viewmodel.exercise.duration}"
+            android:text="@{viewmodel.durationFormatted}"
             app:layout_constraintBottom_toBottomOf="@+id/duration_label"
             app:layout_constraintEnd_toStartOf="@+id/guideline_end"
             app:layout_constraintTop_toTopOf="@+id/duration_label"
