--- a/app/src/main/res/layout/list_item_recent_activities.xml
+++ b/app/src/main/res/layout/list_item_recent_activities.xml
@@ -4,7 +4,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
+        <variable
+            name="duration"
+            type="String" />
 
+        <variable
+            name="exercise"
+            type="com.example.android.forrest.data.model.Exercise" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -28,26 +34,30 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="10dp"
-            app:layout_constraintBottom_toTopOf="@id/time_text"
+            app:distance="@{exercise.distance}"
+            app:layout_constraintBottom_toTopOf="@id/duration_text"
             app:layout_constraintStart_toEndOf="@+id/imageView4"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
             tools:text="15 km" />
 
         <TextView
-            android:id="@+id/time_text"
+            android:id="@+id/duration_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="00:35:13"
+            android:text="@{duration}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/distance_text"
-            app:layout_constraintTop_toBottomOf="@+id/distance_text" />
+            app:layout_constraintTop_toBottomOf="@+id/distance_text"
+            tools:text="00:35:13"/>
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/rhythm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:duration="@{exercise.duration}"
+            app:distance="@{exercise.distance}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
