--- a/app/src/main/res/layout/fragment_run.xml
+++ b/app/src/main/res/layout/fragment_run.xml
@@ -32,6 +32,7 @@
             android:elevation="0dp"
             app:title="@string/home_label"
             app:titleCentered="true"
+            app:popupTheme="@style/ToolbarMenu"
             app:titleTextColor="?attr/colorOnBackground" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -42,7 +43,7 @@
                 android:id="@+id/time_running_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="00:00:00"
+                android:text="@string/time_running_placeholder"
                 android:textColor="?attr/colorOnBackground"
                 android:textSize="40sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="h:m:s"
+                android:text="@string/time_running_label"
                 android:textColor="?attr/colorOnBackground"
                 app:layout_constraintEnd_toEndOf="@id/time_running_text"
                 app:layout_constraintStart_toStartOf="@id/time_running_text"
@@ -66,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="24dp"
-                android:text="0:00"
+                android:text="@string/distance_placeholder"
                 android:textColor="?attr/colorOnBackground"
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -91,7 +92,7 @@
                 android:id="@+id/rhytm_running_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="00:00"
+                android:text="@string/rhythm_placeholder"
                 android:textColor="?attr/colorOnBackground"
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -126,7 +127,7 @@
                 android:id="@+id/calories_running_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0.0"
+                android:text="@string/calories_placeholder"
                 android:textColor="?attr/colorOnBackground"
                 android:textSize="24sp"
                 android:textStyle="bold"
