feat: Added theme styles for chips actions and floating action buttons

--- a/app/src/main/res/layout/fragment_calories.xml
+++ b/app/src/main/res/layout/fragment_calories.xml
@@ -41,16 +41,11 @@
             <com.google.android.material.chip.Chip
                 android:id="@+id/height_chip"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/chip_action_height"
                 android:layout_marginTop="24dp"
                 android:onClick="@{() -> viewmodel.openHeightDialog()}"
                 android:text="@string/height"
-                android:textColor="?attr/colorSecondary"
-                app:chipBackgroundColor="?attr/colorPrimary"
                 app:chipIcon="@drawable/ic_add"
-                app:chipIconTint="?attr/colorSecondary"
-                app:chipStrokeColor="?attr/colorSecondary"
-                app:chipStrokeWidth="1dp"
                 app:layout_constraintEnd_toEndOf="@+id/info_text"
                 app:layout_constraintStart_toStartOf="@+id/info_text"
                 app:layout_constraintTop_toBottomOf="@+id/info_text" />
@@ -58,15 +53,10 @@
             <com.google.android.material.chip.Chip
                 android:id="@+id/weight_chip"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/chip_action_height"
                 android:onClick="@{() -> viewmodel.openWeightDialog()}"
                 android:text="@string/weight"
-                android:textColor="?attr/colorSecondary"
-                app:chipBackgroundColor="?attr/colorPrimary"
                 app:chipIcon="@drawable/ic_add"
-                app:chipIconTint="?attr/colorSecondary"
-                app:chipStrokeColor="?attr/colorSecondary"
-                app:chipStrokeWidth="1dp"
                 app:layout_constraintEnd_toEndOf="@+id/height_chip"
                 app:layout_constraintStart_toStartOf="@+id/height_chip"
                 app:layout_constraintTop_toBottomOf="@+id/height_chip" />
@@ -74,22 +64,16 @@
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                 android:id="@+id/next_button"
                 android:layout_width="wrap_content"
-                android:layout_height="56dp"
+                android:layout_height="@dimen/chip_action_height"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:backgroundTint="?attr/colorSecondary"
-                android:clickable="true"
-                android:focusable="true"
                 android:gravity="center_vertical|end"
                 android:paddingStart="34dp"
                 android:paddingEnd="16dp"
                 android:text="@string/next"
-                android:textColor="@color/black"
                 android:onClick="@{() -> viewmodel.navigateToPermissions()}"
                 app:icon="@drawable/ic_arrow_next"
                 app:iconGravity="end"
-                app:iconSize="16dp"
-                app:iconTint="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
