--- a/app/src/main/res/layout/fragment_run.xml
+++ b/app/src/main/res/layout/fragment_run.xml
@@ -166,17 +166,16 @@
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/run_button"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
+        android:layout_width="164dp"
+        android:layout_height="@dimen/chip_action_height"
         android:layout_marginBottom="24dp"
-        android:contentDescription="@string/run_extended_fab"
+        android:contentDescription="@string/run_forrest_fab"
         android:gravity="center_vertical"
         android:paddingStart="20dp"
-        android:text="@string/run_extended_fab"
+        android:text="@string/run_forrest_fab"
+        android:textAllCaps="false"
         android:onClick="@{() -> viewmodel.verifyLocationAndNavigate()}"
-        app:backgroundTint="?attr/colorSecondary"
         app:icon="@drawable/ic_play"
-        app:iconTint="?attr/colorOnSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/map"
         app:layout_constraintStart_toStartOf="@id/map"
