--- a/app/src/main/res/layout/fragment_permissions.xml
+++ b/app/src/main/res/layout/fragment_permissions.xml
@@ -39,22 +39,16 @@
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                 android:id="@+id/next_button"
                 android:layout_width="wrap_content"
-                android:layout_height="56dp"
+                android:layout_height="@dimen/chip_action_height"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:backgroundTint="?attr/colorSecondary"
-                android:clickable="true"
-                android:focusable="true"
                 android:gravity="center_vertical|end"
                 android:paddingStart="34dp"
                 android:paddingEnd="16dp"
                 android:text="@string/next"
-                android:textColor="@color/black"
                 android:onClick="@{() -> viewmodel.navigateToGoalScreen()}"
                 app:icon="@drawable/ic_arrow_next"
                 app:iconGravity="end"
-                app:iconSize="16dp"
-                app:iconTint="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
