--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,17 @@
         <item name="android:colorBackground">?attr/colorOnBackground</item>
         <item name="android:textColor">?attr/colorOnSecondary</item>
     </style>
+
+    <style name="NextFab">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">@dimen/chip_action_height</item>
+        <item name="android:layout_marginEnd">16dp</item>
+        <item name="android:layout_marginBottom">16dp</item>
+        <item name="android:gravity">center_vertical|end</item>
+        <item name="android:paddingStart">34dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:text">@string/next</item>
+        <item name="icon">@drawable/ic_arrow_next</item>
+        <item name="iconGravity">end</item>
+    </style>
 </resources>
