--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,14 +20,22 @@
         <item name="colorOnError">@color/white</item>
         <item name="colorOnSurface">@color/black</item>
         <item name="scrimBackground">@color/mtrl_scrim_color</item>
-        <item name="textAppearanceHeadline1">@style/TextAppearance.MaterialComponents.Headline1</item>
-        <item name="textAppearanceHeadline2">@style/TextAppearance.MaterialComponents.Headline2</item>
-        <item name="textAppearanceHeadline3">@style/TextAppearance.MaterialComponents.Headline3</item>
-        <item name="textAppearanceHeadline4">@style/TextAppearance.MaterialComponents.Headline4</item>
-        <item name="textAppearanceHeadline5">@style/TextAppearance.MaterialComponents.Headline5</item>
-        <item name="textAppearanceHeadline6">@style/TextAppearance.MaterialComponents.Headline6</item>
-        <item name="textAppearanceSubtitle1">@style/TextAppearance.MaterialComponents.Subtitle1</item>
-        <item name="textAppearanceSubtitle2">@style/TextAppearance.MaterialComponents.Subtitle2</item>
+        <item name="textAppearanceHeadline1">@style/TextAppearance.MaterialComponents.Headline1
+        </item>
+        <item name="textAppearanceHeadline2">@style/TextAppearance.MaterialComponents.Headline2
+        </item>
+        <item name="textAppearanceHeadline3">@style/TextAppearance.MaterialComponents.Headline3
+        </item>
+        <item name="textAppearanceHeadline4">@style/TextAppearance.MaterialComponents.Headline4
+        </item>
+        <item name="textAppearanceHeadline5">@style/TextAppearance.MaterialComponents.Headline5
+        </item>
+        <item name="textAppearanceHeadline6">@style/TextAppearance.MaterialComponents.Headline6
+        </item>
+        <item name="textAppearanceSubtitle1">@style/TextAppearance.MaterialComponents.Subtitle1
+        </item>
+        <item name="textAppearanceSubtitle2">@style/TextAppearance.MaterialComponents.Subtitle2
+        </item>
         <item name="textAppearanceBody1">@style/TextAppearance.MaterialComponents.Body1</item>
         <item name="textAppearanceBody2">@style/TextAppearance.MaterialComponents.Body2</item>
         <item name="textAppearanceCaption">@style/TextAppearance.MaterialComponents.Caption</item>
@@ -37,7 +45,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
     </style>
 
-    <style name="Theme.Forrest" parent="Base.Theme.Forrest"/>
+    <style name="Theme.Forrest" parent="Base.Theme.Forrest" />
 
     <style name="Theme.Forrest.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -71,7 +79,9 @@
 
         <!-- Chip -->
         <item name="chipStyle">@style/Widget.App.Chip</item>
-        <item name="extendedFloatingActionButtonStyle">@style/Widget.App.ExtendedFloatinActionButton</item>
+        <item name="extendedFloatingActionButtonStyle">
+            @style/Widget.App.ExtendedFloatinActionButton
+        </item>
     </style>
 
     <style name="Widget.App.Chip" parent="Widget.MaterialComponents.Chip.Action">
@@ -85,8 +95,7 @@
         <item name="chipStrokeWidth">1dp</item>
     </style>
 
-    <style name="Widget.App.ExtendedFloatinActionButton"
-        parent="Widget.MaterialComponents.ExtendedFloatingActionButton.Icon">
+    <style name="Widget.App.ExtendedFloatinActionButton" parent="Widget.MaterialComponents.ExtendedFloatingActionButton.Icon">
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
         <item name="android:textColor">?attr/colorOnSecondary</item>
@@ -104,6 +113,11 @@
         <item name="android:progressBarStyle">@style/InvisibleProgress</item>
     </style>
 
-    <style name="Translucent" parent="Translucent.Base"/>
+    <style name="Translucent" parent="Translucent.Base" />
+
+    <style name="ThemeOverlay.Forrest.AppWidgetContainer" parent="">
+        <item name="appWidgetBackgroundColor">@color/light_blue_600</item>
+        <item name="appWidgetTextColor">@color/light_blue_50</item>
+    </style>
 
 </resources>
